skeleton of calculator.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,38 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container"></div>
+    <div class="calculator">
+      <div class="display"><input type="text" /></div>
+      <div class="firstRowButtons">
+        <button class="seven">7</button>
+        <button class="eight">8</button>
+        <button class="eight">9</button>
+        <button class="delete">DEL</button>
+        <button class="clear">AC</button>
+      </div>
+      <div class="secondRowButtons">
+        <button class="four">4</button>
+        <button class="five">5</button>
+        <button class="six">6</button>
+        <button class="multiply">X</button>
+        <button class="divide">%</button>
+      </div>
+      <div class="thirdRowButtons">
+        <button class="one">1</button>
+        <button class="two">2</button>
+        <button class="three">3</button>
+        <button class="add">+</button>
+        <button class="subtract">-</button>
+      </div>
+      <div class="fourthRowButtons">
+        <button class="zero">0</button>
+        <button class="period">.</button>
+        <button class="square">Sqrt</button>
+        <button class="squareRoot">Sqr</button>
+        <button class="equalTo">=</button>
+      </div>
+    </div>
+  </body>
 </html>
