styling and logic updates, only actually making it work left

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container"></div>
     <div class="calculator">
-      <div class="display"><input type="text" /></div>
+      <div class="display"><input type="text" value="" readonly /></div>
       <div class="firstRowButtons">
         <button class="seven">7</button>
         <button class="eight">8</button>
