--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container"></div>
     <div class="calculator">
-      <div class="display"><input type="text" value="" readonly /></div>
+      <div class="display"></div>
       <div class="firstRowButtons">
         <button class="seven">7</button>
         <button class="eight">8</button>
@@ -35,8 +35,8 @@
       <div class="fourthRowButtons">
         <button class="zero">0</button>
         <button class="period">.</button>
-        <button class="square">Sqrt</button>
-        <button class="squareRoot">Sqr</button>
+        <button class="squareRoot">Sqrt</button>
+        <button class="sign">+/-</button>
         <button class="equalTo">=</button>
       </div>
     </div>
