updated fix on multiplication

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <button class="four">4</button>
         <button class="five">5</button>
         <button class="six">6</button>
-        <button class="multiply">X</button>
-        <button class="divide">%</button>
+        <button class="multiply">*</button>
+        <button class="divide">/</button>
       </div>
       <div class="thirdRowButtons">
         <button class="one">1</button>
@@ -35,7 +35,6 @@
       <div class="fourthRowButtons">
         <button class="zero">0</button>
         <button class="period">.</button>
-        <button class="squareRoot">Sqrt</button>
         <button class="sign">+/-</button>
         <button class="equalTo">=</button>
       </div>
